add category page

--- a/src/components/CategoryCard/index.css
+++ b/src/components/CategoryCard/index.css
@@ -19,4 +19,8 @@
   font-size: 28px;
   line-height: 110%;
   color: #9D9797;
+}
+
+.card-category-link {
+  text-decoration: none;
 }/*# sourceMappingURL=index.css.map */
