--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
 header {
   width: 100%;
   height: 320px;
@@ -8,29 +7,36 @@ header {
   justify-content: center;
   padding: 35px 0;
 }
-
 header nav {
   width: 100%;
   display: flex;
   justify-content: end;
   display: flex;
-  list-style: none;
   font-family: "Roboto";
+  list-style: none;
   font-size: 20px;
+}
+header nav .menu {
+  width: 50%;
+  display: flex;
+  justify-content: end;
   gap: 64px;
 }
-
+header nav .back-bnt {
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  gap: 26px;
+}
 header nav a {
   color: #FFFDFD;
   text-decoration: none;
   display: flex;
   gap: 8px;
 }
-
 header nav .icon {
   font-size: 24px;
 }
-
 header nav .active div {
   width: 70%;
   height: 5px;
@@ -38,7 +44,6 @@ header nav .active div {
   background: #FFFDFD;
   margin-top: 5px;
 }
-
 header .title,
 header .subtitle {
   font-family: "Lato";
@@ -48,13 +53,9 @@ header .subtitle {
   color: #FFFDFD;
   line-height: 110%;
 }
-
 header .title {
   font-size: 72px;
 }
-
 header .container-title {
   margin-top: 40px;
-}
-
-/*# sourceMappingURL=header.css.map */
+}/*# sourceMappingURL=header.css.map */
