--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,10 +13,23 @@ header {
     display: flex;
     justify-content: end;
     display: flex;
-    list-style: none;
     font-family: $font-primary;
+    list-style: none;
     font-size: 20px;
-    gap: 64px;
+
+    .menu {
+      width: 50%;
+      display: flex;
+      justify-content: end;
+      gap: 64px;
+    }
+
+    .back-bnt {
+      width: 50%;
+      display: flex;
+      justify-content: flex-start;
+      gap: 26px;
+    }
 
     a {
       color: $white;
@@ -40,7 +53,8 @@ header {
     }
   }
 
-  .title, .subtitle {
+  .title,
+  .subtitle {
     font-family: $font-secondary;
     font-style: normal;
     font-weight: 600;
