--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,6 +24,24 @@
   overflow: hidden;
 }
 
+.title-category {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+
+  .plus {
+    font-family: $font-primary;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 130%;
+    color: gray;
+    display: flex;
+    gap: 28px;
+    text-decoration: none;
+  }
+}
+
 .hamburguer-cards {
   width: 100%;
   display: flex;
