--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 header {
   width: 100%;
-  height: 320px;
+  min-height: 320px;
+  height: auto;
   background: #CE3246;
   display: flex;
   justify-content: center;
@@ -54,8 +55,34 @@ header .subtitle {
   line-height: 110%;
 }
 header .title {
+  margin-top: 30px;
   font-size: 72px;
 }
-header .container-title {
+header .containeritle {
   margin-top: 40px;
+}
+
+@media screen and (max-width: 500px) {
+  header {
+    min-height: 100px;
+    height: auto;
+  }
+  header nav {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  header nav .back-bnt {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    gap: 26px;
+  }
+  header nav .menu {
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+  header .title {
+    font-size: 40px;
+  }
 }/*# sourceMappingURL=header.css.map */
