--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,8 @@
 
 header {
   width: 100%;
-  height: 320px;
+  min-height: 320px;
+  height: auto;
   background: $bg-header;
   display: flex;
   justify-content: center;
@@ -64,10 +65,40 @@ header {
   }
 
   .title {
+    margin-top: 30px;
     font-size: 72px;
   }
 
-  .container-title {
+  .containeritle {
     margin-top: 40px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  header {
+    min-height: 100px;
+    height: auto;
+
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+
+      .back-bnt {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        gap: 26px;
+      }
+
+      .menu {
+        width: 100%;
+        justify-content: space-between;
+        margin-top: 30px;
+      }
+    }
+
+    .title {
+      font-size: 40px;
+    }
   }
 }
