--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -1,35 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-.header-container {
-  background-color: #CE3246;
-}
+@import '../../styles/variables.scss';
 
-.container-input {
+.containerInput {
   width: 100%;
   display: flex;
   justify-content: center;
   height: 56px;
 }
 
-.section-wrap {
+.sectionWrap {
   width: 100%;
   margin-top: 47px;
 }
 
-.category-cards {
+.categoryCards {
+  scrollbar-width: none;
   margin-bottom: 66px;
   display: flex;
   gap: 24px;
   width: 100%;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
-.title-category {
+.titleCategory {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.title-category .plus {
-  font-family: "Roboto";
+
+.plus {
+  font-family: $font-primary;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -40,10 +39,11 @@
   text-decoration: none;
 }
 
-.hamburguer-cards {
+.hamburguerCards {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
   margin-bottom: 30px;
-}/*# sourceMappingURL=home.css.map */
+  justify-content: center;
+}
